--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-html, body {
-    font-family: Arial, serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+* {
+    box-sizing: border-box;
 }
