--- a/style.css
+++ b/style.css
@@ -4,4 +4,9 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 1080px;
+    margin: 0 auto;
 }
